# spatial-narrative

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Checklist.md  LICENSE  PLAN.md  README.md  clippy.toml  rustfmt.toml  spec.md
.github/: PULL_REQUEST_TEMPLATE.md  REPOSITORY_INFO.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
book/: book.toml  custom.css
book/src/: SUMMARY.md  changelog.md  contributing.md  introduction.md
book/src/cookbook/: filtering.md  integration.md  patterns.md
book/src/core/: bounds.md  event.md  location.md  narrative.md  overview.md  sources.md  timestamp.md
book/src/getting-started/: concepts.md  installation.md  quick-start.md
book/src/graph/: building.md  connections.md  export.md  overview.md  pathfinding.md
book/src/index/: heatmaps.md  overview.md  spatial.md  spatiotemporal.md  temporal.md
book/src/io/: csv.md  custom.md  geojson.md  json.md  overview.md
book/src/reference/: api.md  performance.md
book/src/text/: geoparser.md
docs/: index.html
examples/: README.md  basic_usage.rs  clustering.rs  comparison.rs  gazetteer_comparison.rs  graph_export.rs  indexing.rs  io_formats.rs  ml_ner_download.rs  movement_analysis.rs  spatial_analysis.rs  temporal_analysis.rs
src/: lib.rs
src/analysis/: mod.rs
src/core/: bounds.rs  event.rs  location.rs  mod.rs  narrative.rs  source.rs  timestamp.rs  traits.rs
src/graph/: mod.rs  narrative_graph.rs
src/index/: mod.rs  spatial.rs  spatiotemporal.rs  temporal.rs
src/io/: csv_format.rs  format.rs  geojson.rs  json_format.rs  mod.rs
src/parser/: gazetteer.rs  geoparser.rs  mention.rs  mod.rs
src/text/: analyzer.rs  entity.rs  keywords.rs  ml_ner.rs  mod.rs
